# car_api

./: .gitignore  pyproject.toml
car_api/: app.py
car_api/core/: security.py
car_api/models/: __init__.py  cars.py  users.py
car_api/routers/: brands.py  cars.py  users.py
car_api/schemas/: brands.py  cars.py  users.py
migrations/: env.py
migrations/versions/: 2c7d134f9435_create_users_table.py  a18a29850704_create_car_and_brand_tables.py
