[project]
name = "car-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Arruda",email = "caugustogarruda@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.136.3,<0.137.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
